--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -288,7 +288,7 @@ else
             }
             else
             {
-                Console.WriteLine("123123");
+                Console.WriteLine("Feil");
             }
         }
         catch (Exception ex)
